--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -9,7 +9,7 @@
 				<img width="100px" [src]="network().image" alt="Network Logo" />
 				<div class="tw-flex tw-flex-col">
 					<span class="tw-font-bold tw-text-3xl tw-text-oebblack">{{ network().name }}</span>
-					<span class="tw-text-oebblack tw-text-lg tw-font-semibold">
+					<!-- <span class="tw-text-oebblack tw-text-lg tw-font-semibold">
 						{{
 							'Network.yourRole'
 								| translate
@@ -17,7 +17,7 @@
 											role:
 												'Network.role.' + network().currentUserStaffMember.roleSlug | translate
 									  }
-						}}</span
+						}}</span -->
 					>
 				</div>
 			</section>
