--- a/src/app/catalog/components/network-catalog/network-catalog.component.html
+++ b/src/app/catalog/components/network-catalog/network-catalog.component.html
@@ -2,16 +2,14 @@
 <div class="oeb page-padding">
 	<div class="oeb-section-sm">
 		<header class="oeb-headline-container tw-relative tw-flex tw-flex-col">
-			<h2 hlmH1 class="tw-text-oebblack">
-				{{ 'Network.networksHeadline' | translate }}
-			</h2>
-			<ng-template [showLoader]="false" [bgAwaitPromises]="[pageReadyPromise]">
-				<span hlmH1 class="lg:tw-pl-[10%] tw-text-purple tw-font-black tw-break-words">
+			<oeb-header-text [text1]="'Network.networksHeadline'" [text2Template]="text2Template" />
+			<ng-template #text2Template>
+				<ng-template [showLoader]="false" [bgAwaitPromises]="[pageReadyPromise]">
 					<span [countUp]="networks().length">{{ networks().length }}</span>
 					<span>
 						{{ networksPluralWord }}
 					</span>
-				</span>
+				</ng-template>
 			</ng-template>
 		</header>
 	</div>
