fix: correct translation string

--- a/src/app/showcase/components/oeb-showcase.component.html
+++ b/src/app/showcase/components/oeb-showcase.component.html
@@ -111,7 +111,7 @@
 						<!-- Email Field -->
 						<oeb-input
 							label="E-Mail"
-							placeholder="Deine E-Mail Adresse"
+							placeholder="Deine E-Mail-Adresse"
 							fieldType="email"
 							[error]="'Bitte gib Deine Email-Adresse ein.'"
 							[autofocus]="true"
@@ -231,7 +231,7 @@
 								<!-- Email Field -->
 								<oeb-input
 									label="Input Elemente already have padding. You do not need to do anything."
-									placeholder="Deine E-Mail Adresse"
+									placeholder="Deine E-Mail-Adresse"
 									fieldType="email"
 									[error]="'Bitte gib Deine Email-Adresse ein.'"
 									[autofocus]="true"
