fix: format section properly

--- a/src/app/issuer/components/issuer-list/issuer-list.component.html
+++ b/src/app/issuer/components/issuer-list/issuer-list.component.html
@@ -281,9 +281,10 @@
 
 	<!-- Staff Requests section -->
 
-	<section class="tw-flex tw-flex-col tw-gap-2" [ngClass]="issuers?.length > 0 ? 'tw-mt-12' : ''">
-		<span [innerHTML]="'Issuer.partOfInstitution' | translate" class="tw-text-2xl tw-italic tw-text-oebblack">
-		</span>
+	<section class="tw-flex tw-flex-col tw-gap-2 tw-mt-6">
+		<p class="tw-text-xl tw-italic tw-text-oebblack">
+			{{ 'Issuer.partOfInstitution' | translate }}
+		</p>
 		@if (staffRequests.length > 0) {
 			<section class="tw-bg-lightpurple tw-p-4 tw-w-full tw-max-w-[600px] tw-rounded-[10px]">
 				<h2
