fix: green color in profile table

--- a/src/app/profile/components/profile/profile.component.html
+++ b/src/app/profile/components/profile/profile.component.html
@@ -119,7 +119,7 @@
 		<p>{{ context.getValue() }}</p>
 		@if (context.row.original.primary) {
 			<p
-				class="tw-px-2 tw-py-1 tw-uppercase tw-bg-green-950 tw-text-white tw-text-xs tw-font-semibold tw-rounded-full"
+				class="tw-px-2 tw-py-1 tw-uppercase tw-bg-darkgreen tw-text-white tw-text-xs tw-font-semibold tw-rounded-full"
 			>
 				{{ 'Profile.primary' | translate }}
 			</p>
@@ -134,7 +134,7 @@
 				hlm
 				name="lucideCheck"
 				size="18px"
-				class="tw-bg-green-950 tw-text-white tw-rounded-full tw-size-8 tw-p-0.5"
+				class="tw-bg-darkgreen tw-text-white tw-rounded-full tw-size-8"
 			/>
 			<p>{{ 'Profile.verified' | translate }}</p>
 		} @else {
