feat: add ability to use min value for inputs

--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -1127,6 +1127,7 @@
 									[fieldType]="'number'"
 									[max]="1000"
 									[maxchar]="4"
+									[min]="1"
 									[errorMessage]="{
 										max: maxValue1000
 									}"
