fix: correct format of checkbox label padding

--- a/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
+++ b/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
@@ -500,11 +500,13 @@
 						>
 						</span>
 					</p>
-					<oeb-checkbox
-						[control]="learningPathForm.rawControlMap.activated"
-						class="tw-mt-2"
-						[text]="'LearningPath.activateMdForUse' | translate"
-					></oeb-checkbox>
+					<div class="tw-mt-3">
+						<oeb-checkbox
+							[control]="learningPathForm.rawControlMap.activated"
+							class="tw-font-semibold"
+							[text]="'LearningPath.activateMdForUse' | translate"
+						/>
+					</div>
 				</section>
 
 				<div class="tw-mt-8">
