feat: make linkedin id number for now

--- a/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
+++ b/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
@@ -43,6 +43,7 @@
 	<oeb-input
 		label="{{ 'Issuer.linkedInId' | translate }}"
 		[sublabelRightTemplate]="linkedInIdSublabelRight"
+		[fieldType]="'number'"
 		sublabel="{{ 'Issuer.linkedInIdHint' | translate }}"
 		[control]="issuerForm.rawControlMap.issuer_linkedin_id"
 	/>
