--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -36,7 +36,7 @@
 										></oeb-button>
 									}
 								}
-								@if (config.shareButton) {
+								@if (config.shareButton && badge) {
 									<oeb-button
 										hlmBtn
 										class="lg:tw-whitespace-nowrap"
