--- a/src/app/issuer/components/badgeclass-edit-qr/badgeclass-edit-qr.component.html
+++ b/src/app/issuer/components/badgeclass-edit-qr/badgeclass-edit-qr.component.html
@@ -7,7 +7,7 @@
 			<h1 hlmH1 class="tw-text-purple tw-font-extrabold">QR-Code-Vergabe bearbeiten</h1>
 		</div>
 
-		<div class="tw-bg-lightpurple tw-rounded-3xl tw-mt-2 tw-p-10">
+		<div class="tw-bg-lavender tw-rounded-3xl tw-mt-2 tw-p-10">
 			<edit-qr-form [editing]="true"></edit-qr-form>
 		</div>
 	</div>
