--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -4,12 +4,14 @@
 			<bg-breadcrumbs [linkentries]="crumbs"> </bg-breadcrumbs>
 		</div>
 		<h1 hlmH1 class="tw-text-purple tw-font-black">{{ 'Network.welcomeDashboard' | translate }}</h1>
-		<ng-template [bgAwaitPromises]="[networkLoaded()]">
+		<ng-template [bgAwaitPromises]="[networkLoaded]">
 			<section class="tw-flex tw-gap-4 tw-mt-8 tw-items-center">
-				<img width="100px" [src]="network().image" alt="Network Logo" />
+				<div class="tw-bg-white tw-w-[100px] tw-h-[100px]">
+					<img width="70px" [src]="network().image" alt="Network Logo" />
+				</div>
 				<div class="tw-flex tw-flex-col">
 					<span class="tw-font-bold tw-text-3xl tw-text-oebblack">{{ network().name }}</span>
-					<!-- <span class="tw-text-oebblack tw-text-lg tw-font-semibold">
+					<span class="tw-text-oebblack tw-text-lg tw-font-semibold">
 						{{
 							'Network.yourRole'
 								| translate
@@ -17,7 +19,7 @@
 											role:
 												'Network.role.' + network().currentUserStaffMember.roleSlug | translate
 									  }
-						}}</span -->
+						}}</span
 					>
 				</div>
 			</section>
@@ -33,7 +35,7 @@
 			</oeb-tabs>
 		</ng-template>
 		<ng-template #overviewTemplate>
-			<div class="tw-my-8">
+			<div class="tw-my-12">
 				<oeb-button (click)="openDialog()" [text]="'Network.inviteInstitutions' | translate"> </oeb-button>
 			</div>
 		</ng-template>
