fix(footer): mobile layout fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -358,7 +358,7 @@
 			</div>
 		</div>
 
-		<div class="tw-flex tw-flex-col tw-align-stretch tw-min-w-[24rem]">
+		<div class="tw-flex tw-flex-col tw-align-stretch tw-min-w-full sm:tw-min-w-[24rem]">
 			<oeb-button
 				[routerLink]="['/public/about/newsletter']"
 				[text]="'Newsletter.signup' | translate"
